[gd_scene load_steps=4 format=3 uid="uid://bajqn8rjoqf33"]

[ext_resource type="Script" path="res://addons/scenegraph/FileMenuButton.gd" id="1_y65k3"]
[ext_resource type="Script" path="res://addons/scenegraph/GraphFileList.gd" id="2_5md10"]
[ext_resource type="Script" path="res://addons/scenegraph/RoomGraphElement.gd" id="3_xdmpl"]

[node name="RoomGraphDock" type="HBoxContainer"]
offset_right = 640.0
offset_bottom = 360.0
size_flags_vertical = 3

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
split_offset = -500

[node name="FileTreeMargin" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_right = 5

[node name="FileTreeContainer" type="VBoxContainer" parent="HSplitContainer/FileTreeMargin"]
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="HSplitContainer/FileTreeMargin/FileTreeContainer"]
layout_mode = 2
text = "File"
alignment = 0
item_count = 7
popup/item_0/text = "New Scene Graph"
popup/item_1/id = -1
popup/item_1/separator = true
popup/item_2/text = "Open Scene Graph"
popup/item_2/id = 1
popup/item_3/text = "Save"
popup/item_3/id = 2
popup/item_3/disabled = true
popup/item_4/text = "Save As..."
popup/item_4/id = 3
popup/item_4/disabled = true
popup/item_5/id = -1
popup/item_5/separator = true
popup/item_6/text = "Close"
popup/item_6/id = 4
popup/item_6/disabled = true
script = ExtResource("1_y65k3")

[node name="FileList" type="ItemList" parent="HSplitContainer/FileTreeMargin/FileTreeContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1
allow_rmb_select = true
script = ExtResource("2_5md10")

[node name="RoomGraphMargin" type="MarginContainer" parent="HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RoomGraph" type="GraphEdit" parent="HSplitContainer/RoomGraphMargin" node_paths=PackedStringArray("fileList")]
visible = false
layout_mode = 2
minimap_enabled = false
show_zoom_label = true
script = ExtResource("3_xdmpl")
roomGraphNodeElement = "res://addons/scenegraph/RoomGraphNode.tscn"
fileList = NodePath("../../FileTreeMargin/FileTreeContainer/FileList")

[connection signal="CloseGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_file_menu_close_graph"]
[connection signal="LoadGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_file_menu_load_graph"]
[connection signal="NewGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_file_menu_new_graph"]
[connection signal="SaveGraph" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_file_menu_save_graph"]
[connection signal="SaveGraphAs" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_file_menu_save_graph_as"]
[connection signal="about_to_popup" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" method="_on_about_to_popup"]
[connection signal="empty_clicked" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" method="_on_file_list_empty_clicked"]
[connection signal="graphClosed" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" to="HSplitContainer/RoomGraphMargin/RoomGraph" method="_on_file_list_graph_closed"]
[connection signal="graphOpened" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" to="HSplitContainer/RoomGraphMargin/RoomGraph" method="_on_file_list_graph_opened"]
[connection signal="item_activated" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_item_activated"]
[connection signal="item_clicked" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileMenu" method="_on_file_list_item_clicked"]
[connection signal="item_selected" from="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" to="HSplitContainer/FileTreeMargin/FileTreeContainer/FileList" method="_on_item_selected"]
[connection signal="delete_nodes_request" from="HSplitContainer/RoomGraphMargin/RoomGraph" to="HSplitContainer/RoomGraphMargin/RoomGraph" method="_on_delete_nodes_request"]
